# SAUVC_2021_testing_code

./: Pressure sensor code  README.md  requirements.txt
Controls/: READme.md
Controls/PID/: PID.py  Pseudocode.txt
Controls/Sonar/: FFT_realtime.py  readme.md
Controls/Teensy/Controls/MotorControl/: MotorControl.ino
Controls/Teensy/Power/BatteryManagementSystem/: BatteryManagementSystem.ino
Controls/Teensy/Test/MORETESTKILLME/: MORETESTKILLME.ino
Controls/Teensy/Test/MotorTest/: MotorTest.ino
Controls/Teensy/Test/Reversible_ESCs_Test/: Reversible_ESCs_Test.ino
Controls/Teensy/Test/TEENSY TEST/MotorTest/: MotorTest.ino
Controls/Teensy/Test/TEENSY TEST/TeensyHardwareTest/: TeensyHardwareTest.ino
Controls/path_finding_algorithm/: astar_pathfinding.py
Controls/path_finding_algorithm/path_finding_maze/: rrt.py
Controls/path_finding_algorithm/path_finding_maze/electric_potential_field/: electric_potential_fields.py  maze.py
Controls/path_finding_algorithm/path_finding_maze/rrt/: main.py
Navigation/gate_detection/: gate-dataset-model.ipynb
Navigation/gate_detection/.ipynb_checkpoints/: gate-dataset-model-checkpoint.ipynb
merlion/: .gitignore  README.md  push2robot.sh
merlion/merlion_all/: CMakeLists.txt  package.xml
merlion/merlion_all/launch/: base.launch
merlion/merlion_all/scripts/: initialisation.py
merlion/merlion_all/src/: base_strategy.py  sauvc2019_final.py
merlion/merlion_cv/: CMakeLists.txt  package.xml
merlion/merlion_cv/launch/: all_trackers.launch  flare_tracker.launch  gate_tracker.launch
merlion/merlion_cv/scripts/: camera.py  config.json  flare_tracker.py  gate_tracker.py  record.avi  test_upload.txt
merlion/merlion_hardware/: CMakeLists.txt  package.xml
merlion/merlion_hardware/arduino/MotorControl/: MotorControl.ino  teensy_rosserial.launch
merlion/merlion_hardware/arduino/Power/BatteryManagementSystem/: BatteryManagementSystem.ino
merlion/merlion_hardware/arduino/mcu/: mcu.ino
merlion/merlion_hardware/arduino/mcu/MotorControl/: MotorControl.ino
merlion/merlion_hardware/launch/: all_hardware.launch  cameras.launch  imu.launch  localization.launch  mcu.launch  optical_odometer.launch
merlion/merlion_hardware/msg/: Motor.msg
merlion/merlion_hardware/scripts/: optical_odometer.py  teensy_talker.py  thruster_manager.py
merlion/merlion_pid/: CMakeLists.txt  package.xml
merlion/merlion_pid/launch/: pid_publisher.launch
merlion/merlion_pid/scripts/: pid_publisher.py  pid_test.py  setpoint_once.py
merlion/merlion_sensors/vectornav/params/: vn100.yaml
merlion/merlion_sensors/vectornav/src/: main.cpp
merlion/merlion_state/: CMakeLists.txt  package.xml
merlion/merlion_state/launch/: state_publisher.launch
merlion/merlion_state/scripts/: IMULogger.py  state_publisher.py
