<?xml version="1.0"?>
<package format="2">
  <name>merlion_hardware</name>
  <version>0.0.0</version>
  <description>The merlion_hardware package</description>

  <maintainer email="long_tran@mymail.sutd.edu.sg">BlongTran</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
