<?xml version="1.0"?>
<package format="2">
  <name>merlion_pid</name>
  <version>0.0.0</version>
  <description>The merlion_pid package</description>

  <maintainer email="long_tran@mymail.sutd.edu.sg">BlongTran</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pid</depend>

</package>
